--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="logo">
-            <a href="">Matrix</a>
+            <a href="">Battle Time</a>
         </div>
         <ul class="nav-links">
             <li><a href="">Home</a></li>
